# nonebot_plugin_mcversion

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_mcversion/: __init__.py
